Changed design of dropdown and navbar, Added prev navigation button in section two navbar

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
             <div class="mobile-nav">
                 <img src="./images/close.png" width="30px" alt="Close Icon" class="close-icon">
-                <img src="./images/logo.png" width="150px" alt="Company Logo">
+                <img src="./images/logo.png" width="120px" alt="Company Logo">
                 <ul>
                     <li>Home</li>
                     <li>Resources</li>
@@ -117,6 +117,10 @@
             <div class="section-two">
                 <div class="container">
                     <div class="section-two-nav">
+                        <button class="nav-prev-button hidden" id="slideLeftNav">
+                            <img src="./images/right-arrow-white.png" width="25px" style="transform: rotate(180deg)"
+                                alt="Left Arrow icon">
+                        </button>
                         <ul>
                             <li>Home</li>
                             <li>About</li>
