--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                                         <p id="minValue">Rs.1Lakh</p>
                                         <p id="maxValue">Rs.5Cr</p>
                                     </div>
-                                    <input type="range" min="0" max="5" value="0" id="minSlider">
-                                    <input type="range" min="0" max="5" value="5" id="maxSlider">
+                                    <input type="range" id="minSlider" min="1" max="500" value="1">
+                                    <input type="range" id="maxSlider" min="1" max="500" value="500">
                                     <div class="slider-labels d-flex align-items-center justify-content-between">
                                         <span>1Lakh</span>
                                         <span>
