Background Video issue fixed

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
                         <source src="./videos/business-intro.mov" type="video/mp4">
                         Your browser does not support HTML5 video.
                     </video>
+                    <video autoplay muted id="background-video-2">
+                        <source src="./videos/business-intro.mov" type="video/mp4">
+                        Your browser does not support HTML5 video.
+                    </video>
                     <div class="section-one-container">
                         <div class="section-one-slider">
                             <div class="slide" data-start="0" data-end="1">
@@ -97,7 +101,7 @@
                                 <p>Find your Dream House in just 3 steps</p>
                             </div>
                             <div class="slide" data-start="5" data-end="6">
-                                <h1 id="slide-4">Click. Connect. Close</h1>
+                                <h1 id="slide-5">Click. Connect. Close</h1>
                                 <p>Find your Dream House in just 3 steps</p>
                             </div>
                         </div>
