Fixed text scroller animation

--- a/index.html
+++ b/index.html
@@ -434,8 +434,12 @@
                                             <img src="./images/ellipse2.png" class="user-img" width="35px" alt="user">
                                             <img src="./images/ellipse3.png" class="user-img" width="35px" alt="user">
                                             <img src="./images/ellipse4.png" class="user-img" width="35px" alt="user">
-                                            <img src="./images/realezi-arrow.png" class="realezi-arrow" width="30px"
-                                                alt="Realezi Arrow">
+                                            <div class="arrow-pair">
+                                                <img src="./images/realezi-arrow.png" width="35px" alt="Send icon"
+                                                    class="realezi-arrow arrow">
+                                                <img src="./images/filled-arrow.png" width="35px" alt="Realazi arrow"
+                                                    class="filled-arrow arrow  hidden">
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="tablet-main-content">
@@ -1067,7 +1071,9 @@
     <script defer src="./tablet-animation.js"></script>
     <script defer src="./box-animation.js"></script>
     <script defer src="./blog-news-section.js"></script>
-    <script defer src="./button-slider.js"></script>
+    <script defer src="./text-scroller.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
 </body>
 
 </html>
