Added animation to footer links

--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
                                     <ul>
                                         <li>Find a Right Property</li>
                                         <li>Sell or Rent Your Property</li>
-                                        <li>Build Your Home From<br> Scratch </li>
+                                        <li>Build Your Home From Scratch </li>
                                         <li>Interior Designing & Decor</li>
                                         <li>Solar Panel</li>
                                         <li>Home Loans</li>
