Changes colour of sliders in blog section

--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                     <div class="blog-section active my-4" id="blog-section">
                         <div class="container-grid">
                             <div class="single-blog">
-                                <div class="slide-container">
+                                <div class="slide-container" style="background-color: #EC7100;">
                                     <h3>Walk through 10 mind-blowing heritage monuments </h3>
                                 </div>
                                 <p class="tag">Heritage</p>
@@ -703,8 +703,8 @@
                                 </div>
                             </div>
                             <div class="single-blog">
-                                <div class="slide-container">
-                                    <h3>Walk through 10 mind-blowing heritage monuments </h3>
+                                <div class="slide-container" style="background-color: #FFFFFF;">
+                                    <h3 style="color: #111F3C;">Walk through 10 mind-blowing heritage monuments </h3>
                                 </div>
                                 <p class="tag">Heritage</p>
                                 <img class="blog-img" src="./images/blog-img-2.png" alt="">
@@ -722,7 +722,7 @@
                                 </div>
                             </div>
                             <div class="single-blog">
-                                <div class="slide-container">
+                                <div class="slide-container" style="background-color: #EC7100;">
                                     <h3>Walk through 10 mind-blowing heritage monuments </h3>
                                 </div>
                                 <p class="tag">Heritage</p>
@@ -741,8 +741,8 @@
                                 </div>
                             </div>
                             <div class="single-blog">
-                                <div class="slide-container">
-                                    <h3>Walk through 10 mind-blowing heritage monuments </h3>
+                                <div class="slide-container" style="background-color: #FFFFFF;">
+                                    <h3 style="color: #111F3C;">Walk through 10 mind-blowing heritage monuments </h3>
                                 </div>
                                 <p class="tag">Heritage</p>
                                 <img class="blog-img" src="./images/blog-img-3.png" alt="">
@@ -760,7 +760,7 @@
                                 </div>
                             </div>
                             <div class="single-blog">
-                                <div class="slide-container">
+                                <div class="slide-container" style="background-color: #EC7100;">
                                     <h3>Walk through 10 mind-blowing heritage monuments </h3>
                                 </div>
                                 <p class="tag">Heritage</p>
@@ -779,8 +779,8 @@
                                 </div>
                             </div>
                             <div class="single-blog">
-                                <div class="slide-container">
-                                    <h3>Walk through 10 mind-blowing heritage monuments </h3>
+                                <div class="slide-container" style="background-color: #FFFFFF;">
+                                    <h3 style="color: #111F3C;">Walk through 10 mind-blowing heritage monuments </h3>
                                 </div>
                                 <p class="tag">Heritage</p>
                                 <img class="blog-img" src="./images/blog-img-2.png" alt="">
