Fixed the blur animation issue

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <div class="search-container-outer">
                         <div class="toggle-button">
                             <p class="active">Buy</p>
-                            <p>Rent</p>
+                            <p id="rent-btn">Rent</p>
                         </div>
                         <div class="search-container d-flex align-items-center">
                             <div class="dropdown">
@@ -248,11 +248,11 @@
                         </div>
                     </div>
                     <div class="properties-categories d-flex align-items-center justify-content-center">
-                        <canvas id="residential" width="100" height="100"></canvas>
-                        <canvas id="commercial" width="100" height="100"></canvas>
-                        <canvas id="plot" width="100" height="100"></canvas>
-                        <canvas id="pg" class="hidden" width="100" height="100"></canvas>
-                        <canvas id="coworkingspace" class="hidden" width="100" height="100"></canvas>
+                        <canvas id="residential"></canvas>
+                        <canvas id="commercial"></canvas>
+                        <canvas id="plot"></canvas>
+                        <canvas id="pg"></canvas>
+                        <canvas id="coworkingspace"></canvas>
                     </div>
                 </div>
             </div>
@@ -896,7 +896,7 @@
                                     <li>FAQs</li>
                                     <button class="align-items-center justify-content-center blue-btn mt-3">
                                         <p class="mx-2">We are hiring</p>
-                                        <canvas id="partyPopper" width="40" height="40"></canvas>
+                                        <canvas id="partyPopper"></canvas>
                                     </button>
                                 </ul>
                                 <div class="playStore-btn d-flex align-items-center">
