Fixed canvas extra space issue

--- a/index.html
+++ b/index.html
@@ -248,11 +248,21 @@
                         </div>
                     </div>
                     <div class="properties-categories d-flex align-items-center justify-content-center">
-                        <canvas id="residential"></canvas>
-                        <canvas id="commercial"></canvas>
-                        <canvas id="plot"></canvas>
-                        <canvas id="pg"></canvas>
-                        <canvas id="coworkingspace"></canvas>
+                        <div class="canvas-container">
+                            <canvas id="residential"></canvas>
+                        </div>
+                        <div class="canvas-container">
+                            <canvas id="commercial"></canvas>
+                        </div>
+                        <div class="canvas-container" id="plot-container">
+                            <canvas id="plot"></canvas>
+                        </div>
+                        <div class="canvas-container" id="pg-container">
+                            <canvas id="pg"></canvas>
+                        </div>
+                        <div class="canvas-container" id="coworkingspace-container">
+                            <canvas id="coworkingspace"></canvas>
+                        </div>
                     </div>
                 </div>
             </div>
