--- a/index.html
+++ b/index.html
@@ -1158,7 +1158,7 @@
     <script defer src="./box-animation.js"></script>
     <script defer src="./blog-news-section.js"></script>
     <script defer src="./text-scroller.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://unpkg.com/@rive-app/canvas@2.9.1"></script>
