--- a/index.html
+++ b/index.html
@@ -186,28 +186,19 @@
                 <div class="section-one-container">
                     <div class="section-one-slider">
                         <div class="slide" data-start="0" data-end="1">
-                            <h1 id="slide-1">Click. Connect.<br> Close</h1>
-                            <p>Find your Dream House in just <span>3</span> steps </p>
+                            <h1 id="slide-1">Click.<br> Connect.<br> Close.</h1>
                         </div>
                         <div class="slide" data-start="2" data-end="4">
-                            <h1 id="slide-2">Click. Connect.<br> Close</h1>
-                            <p>Find your Dream House in just <span>3</span> steps </p>
-
+                            <h1 id="slide-2">Click.<br> Connect.<br> Close.</h1>
                         </div>
                         <div class="slide" data-start="5" data-end="6">
-                            <h1 id="slide-3">Click. Connect.<br> Close</h1>
-                            <p>Find your Dream House in just <span>3</span> steps </p>
-
+                            <h1 id="slide-3">Click.<br> Connect.<br> Close.</h1>
                         </div>
                         <div class="slide" data-start="5" data-end="6">
-                            <h1 id="slide-4">Click. Connect.<br> Close</h1>
-                            <p>Find your Dream House in just <span>3</span> steps </p>
-
+                            <h1 id="slide-4">Click.<br> Connect.<br> Close.</h1>
                         </div>
                         <div class="slide" data-start="5" data-end="6">
-                            <h1 id="slide-5">Click. Connect.<br> Close</h1>
-                            <p>Find your Dream House in just <span>3</span> steps </p>
-
+                            <h1 id="slide-5">Click.<br> Connect.<br> Close.</h1>
                         </div>
                     </div>
                 </div>
@@ -553,7 +544,7 @@
                             </div>
                             <div class="tablet-main w-100">
                                 <div class="tablet-header py-3 d-flex justify-content-between">
-                                    <h2 class="mb-0">Book a Site Visit </h2>
+                                    <h2 class="mb-0">Book a Site Visit</h2>
                                     <div class="users d-flex align-items-center">
                                         <img src="./images/ellipse1.png" class="user-img" width="35px" alt="user">
                                         <img src="./images/eliipse2.png" class="user-img" width="35px" alt="user">
@@ -570,10 +561,9 @@
                                 <div class="tablet-main-content">
                                     <div class="d-flex">
                                         <div class="tablet-content-container">
-                                            <h5>Book a Site Visit </h5>
-                                            <p>Featured Properties Featured Properties Featured Properties
-                                                Featured PropertiesFeatured PropertiesFeatured Properties
-                                                Featured PropertiesFeatured Properties</p>
+                                            <h5>Book a Site Visit</h5>
+                                            <p>Your Time. Your Date. Site Visit. Schedule site visits conveniently with
+                                                a single click and make the whole process hassle-free.</p>
                                             <button>View More</button>
                                         </div>
                                         <div class="animated-container-outer">
@@ -584,101 +574,125 @@
                                             </div>
                                             <div
                                                 class="animated-container-content align-items-start justify-content-between">
-                                                <p>Featured Properties Featured Properties Featured Properties
-                                                    Featured PropertiesFeatured PropertiesFeatured Properties
-                                                    Featured PropertiesFeatured Properties</p>
+                                                <div class="short-text-outer">
+                                                    <p class="short-text">Your Time. Your Date. Site Visit. Schedule
+                                                        site visits
+                                                        conveniently
+                                                        with a single click and make the whole process hassle-free.</p>
+                                                    <a href="javascript:void(0);" class="read-more-btn">Read
+                                                        more</a>
+                                                </div>
                                                 <button>View More</button>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="d-flex">
                                         <div class="animated-container-outer">
-                                            <h5>Book a Site Visit </h5>
+                                            <h5>Dream List</h5>
                                             <div class="animated-container">
                                                 <div class="color-overlay"></div>
                                                 <img src="./images/tablet-img-2.png" alt="" class="tablet-image">
                                             </div>
                                             <div
                                                 class="animated-container-content align-items-start justify-content-between">
-                                                <p>Featured Properties Featured Properties Featured Properties
-                                                    Featured PropertiesFeatured PropertiesFeatured Properties
-                                                    Featured PropertiesFeatured Properties</p>
+                                                <div class="short-text-outer">
+                                                    <p class="short-text">Don’t miss your perfect match /opportunity.
+                                                        Keep track of all
+                                                        your
+                                                        shortlisted properties and revisit them anywhere, anytime.</p>
+                                                    <a href="javascript:void(0);" class="read-more-btn">Read
+                                                        more</a>
+                                                </div>
                                                 <button>View More</button>
                                             </div>
                                         </div>
                                         <div class="tablet-content-container">
-                                            <h5>Book a Site Visit </h5>
-                                            <p>Featured Properties Featured Properties Featured Properties
-                                                Featured PropertiesFeatured PropertiesFeatured Properties
-                                                Featured PropertiesFeatured Properties</p>
+                                            <h5>Dream List</h5>
+                                            <p>Don’t miss your perfect match /opportunity. Keep track
+                                                of all your
+                                                shortlisted properties and revisit them anywhere, anytime.</p>
                                             <button>View More</button>
                                         </div>
                                     </div>
                                     <div class="d-flex">
                                         <div class="tablet-content-container">
-                                            <h5>Book a Site Visit </h5>
-                                            <p>Featured Properties Featured Properties Featured Properties
-                                                Featured PropertiesFeatured PropertiesFeatured Properties
-                                                Featured PropertiesFeatured Properties</p>
+                                            <h5>Your Realezi Passbook</h5>
+                                            <p>One-stop destination for all your transaction records. Set up payment
+                                                reminders, and organise and manage all your documents with ease.</p>
                                             <button>View More</button>
                                         </div>
                                         <div class="animated-container-outer">
-                                            <h5>Book a Site Visit </h5>
+                                            <h5>Your Realezi Passbook</h5>
                                             <div class="animated-container">
                                                 <div class="color-overlay"></div>
                                                 <img src="./images/tablet-img-3.png" alt="" class="tablet-image">
                                             </div>
                                             <div
                                                 class="animated-container-content align-items-start justify-content-between">
-                                                <p>Featured Properties Featured Properties Featured Properties
-                                                    Featured PropertiesFeatured PropertiesFeatured Properties
-                                                    Featured PropertiesFeatured Properties</p>
+                                                <div class="short-text-outer">
+                                                    <p class="short-text">One-stop destination for all your transaction
+                                                        records. Set up payment
+                                                        reminders, and organise and manage all your documents with ease.
+                                                    </p>
+                                                    <a href="javascript:void(0);" class="read-more-btn">Read
+                                                        more</a>
+                                                </div>
                                                 <button>View More</button>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="d-flex">
                                         <div class="animated-container-outer">
-                                            <h5>Book a Site Visit </h5>
+                                            <h5>One for All</h5>
                                             <div class="animated-container">
                                                 <div class="color-overlay"></div>
                                                 <img src="./images/tablet-img-4.png" alt="" class="tablet-image">
                                             </div>
                                             <div
                                                 class="animated-container-content align-items-start justify-content-between">
-                                                <p>Featured Properties Featured Properties Featured Properties
-                                                    Featured PropertiesFeatured PropertiesFeatured Properties
-                                                    Featured PropertiesFeatured Properties</p>
+                                                <div class="short-text-outer">
+                                                    <p class="short-text">Pre to post-purchase solutions: we’ve got you
+                                                        covered at every step
+                                                        of the way. Together, we will go beyond! </p>
+                                                    <a href="javascript:void(0);" class="read-more-btn">Read
+                                                        more</a>
+                                                </div>
                                                 <button>View More</button>
                                             </div>
                                         </div>
                                         <div class="tablet-content-container">
-                                            <h5>Book a Site Visit </h5>
-                                            <p>Featured Properties Featured Properties Featured Properties
-                                                Featured PropertiesFeatured PropertiesFeatured Properties
-                                                Featured PropertiesFeatured Properties</p>
+                                            <h5>One for All</h5>
+                                            <p>Pre to post-purchase solutions: we’ve got you covered
+                                                at every step of
+                                                the way. Together, we will go beyond! </p>
+
                                             <button>View More</button>
                                         </div>
                                     </div>
                                     <div class="d-flex">
                                         <div class="tablet-content-container">
-                                            <h5>Book a Site Visit </h5>
-                                            <p>Featured Properties Featured Properties Featured Properties
-                                                Featured PropertiesFeatured PropertiesFeatured Properties
-                                                Featured PropertiesFeatured Properties</p>
+                                            <h5>Dedicated RM</h5>
+                                            <p>Get personalised guidance and tailored services from our dedicated
+                                                Relationship Manager- ensuring you never feel lost!</p>
                                             <button>View More</button>
                                         </div>
                                         <div class="animated-container-outer">
-                                            <h5>Book a Site Visit </h5>
+                                            <h5>Dedicated RM</h5>
                                             <div class="animated-container">
                                                 <div class="color-overlay"></div>
                                                 <img src="./images/tablet-img-5.png" alt="" class="tablet-image">
                                             </div>
                                             <div
                                                 class="animated-container-content align-items-start justify-content-between">
-                                                <p>Featured Properties Featured Properties Featured Properties
-                                                    Featured PropertiesFeatured PropertiesFeatured Properties
-                                                    Featured PropertiesFeatured Properties</p>
+                                                <div class="short-text-outer">
+                                                    <p class="short-text">Get personalised guidance and tailored
+                                                        services
+                                                        from our dedicated Relationship Manager- ensuring you never feel
+                                                        lost!
+                                                    </p>
+                                                    <a href="javascript:void(0);" class="read-more-btn">Read
+                                                        more</a>
+                                                </div>
                                                 <button>View More</button>
                                             </div>
                                         </div>
@@ -1158,11 +1172,11 @@
     <script defer src="./box-animation.js"></script>
     <script defer src="./blog-news-section.js"></script>
     <script defer src="./text-scroller.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script> -->
     <script src="https://unpkg.com/@rive-app/canvas@2.9.1"></script>
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script defer src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script defer src="./rive-animations.js"></script>
     <script defer src="section-transition.js"></script>
 </body>
