--- a/index.html
+++ b/index.html
@@ -1288,7 +1288,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script> -->
-    <script src="https://unpkg.com/@rive-app/canvas@2.9.1"></script>
+    <!-- <script src="https://unpkg.com/@rive-app/canvas@2.9.1"></script> -->
+    <script src="./riv/rive.js"></script>
     <script defer src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script defer src="./rive-animations.js"></script>
     <script defer src="section-transition.js"></script>
