Compressed blog images

--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
                                 <h3 style="color: #111F3C;">Walk through 10 mind-blowing heritage monuments </h3>
                             </div>
                             <p class="tag">Heritage</p>
-                            <img class="blog-img" src="./images/blog-img-2.png" alt="">
+                            <img class="blog-img" src="./images/blog-img-2.jpeg" alt="">
                             <div class="p-2">
                                 <h4>Walk through 10 mind-blowing heritage monuments </h4>
                                 <div class="d-flex align-items-center justify-content-between">
@@ -873,7 +873,7 @@
                                 <h3>Walk through 10 mind-blowing heritage monuments </h3>
                             </div>
                             <p class="tag">Heritage</p>
-                            <img class="blog-img" src="./images/blog-img-3.png" alt="">
+                            <img class="blog-img" src="./images/blog-img-3.jpeg" alt="">
                             <div class="p-2">
                                 <h4>Walk through 10 mind-blowing heritage monuments </h4>
                                 <div class="d-flex align-items-center justify-content-between">
@@ -892,7 +892,7 @@
                                 <h3 style="color: #111F3C;">Walk through 10 mind-blowing heritage monuments </h3>
                             </div>
                             <p class="tag">Heritage</p>
-                            <img class="blog-img" src="./images/blog-img-3.png" alt="">
+                            <img class="blog-img" src="./images/blog-img-3.jpeg" alt="">
                             <div class="p-2">
                                 <h4>Walk through 10 mind-blowing heritage monuments </h4>
                                 <div class="d-flex align-items-center justify-content-between">
@@ -930,7 +930,7 @@
                                 <h3 style="color: #111F3C;">Walk through 10 mind-blowing heritage monuments </h3>
                             </div>
                             <p class="tag">Heritage</p>
-                            <img class="blog-img" src="./images/blog-img-2.png" alt="">
+                            <img class="blog-img" src="./images/blog-img-2.jpeg" alt="">
                             <div class="p-2">
                                 <h4>Walk through 10 mind-blowing heritage monuments </h4>
                                 <div class="d-flex align-items-center justify-content-between">
@@ -961,7 +961,7 @@
                         </div>
                     </div>
                     <div class="single-news-card align-items-center">
-                        <img src="./images/blog-img-2.png" alt="">
+                        <img src="./images/blog-img-2.jpeg" alt="">
                         <div class="content p-3 d-flex">
                             <p class="tag">Heritage</p>
                             <h4>Walk through 10 mind-blowing heritage monuments </h4>
@@ -972,7 +972,7 @@
                         </div>
                     </div>
                     <div class="single-news-card align-items-center">
-                        <img src="./images/blog-img-3.png" alt="">
+                        <img src="./images/blog-img-3.jpeg" alt="">
                         <div class="content p-3 d-flex">
                             <p class="tag">Heritage</p>
                             <h4>Walk through 10 mind-blowing heritage monuments </h4>
