--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
 
         <div class="section-three">
             <h2>Featured Properties</h2>
-            <div class="video-slider">
+            <div class="video-slider position-relative">
                 <button class="nav-btn prev-btn"><img src="./images/right-arrow-white.png" width="18px"></button>
                 <div class="video-container d-flex justify-content-start">
                     <div class="video">
@@ -1166,7 +1166,7 @@
                                 <h3>Walk through 10 mind-blowing heritage monuments </h3>
                             </div>
                             <p class="tag">Heritage</p>
-                            <img class="blog-img" src="./images/blog-img-3.jpeg" alt="">
+                            <img class="blog-img" src="./images/blog-img-3.jpg" alt="">
                             <div class="p-2">
                                 <h4>Walk through 10 mind-blowing heritage monuments </h4>
                                 <div class="d-flex align-items-center justify-content-between">
@@ -1185,7 +1185,7 @@
                                 <h3 style="color: #111F3C;">Walk through 10 mind-blowing heritage monuments </h3>
                             </div>
                             <p class="tag">Heritage</p>
-                            <img class="blog-img" src="./images/blog-img-3.jpeg" alt="">
+                            <img class="blog-img" src="./images/blog-img-3.jpg" alt="">
                             <div class="p-2">
                                 <h4>Walk through 10 mind-blowing heritage monuments </h4>
                                 <div class="d-flex align-items-center justify-content-between">
@@ -1265,7 +1265,7 @@
                         </div>
                     </div>
                     <div class="single-news-card align-items-center">
-                        <img src="./images/blog-img-3.jpeg" alt="">
+                        <img src="./images/blog-img-3.jpg" alt="">
                         <div class="content p-3 d-flex">
                             <p class="tag">Heritage</p>
                             <h4>Walk through 10 mind-blowing heritage monuments </h4>
@@ -1402,7 +1402,7 @@
                     <a href="#">Read More</a>
                 </div>
                 <div class="grid-item item3 position-relative">
-                    <img src="./images/blog-img-3.jpeg" alt="" width="100%" height="100%">
+                    <img src="./images/blog-img-3.jpg" alt="" width="100%" height="100%">
                     <p>Walk through 10 mind-blowing heritage
                         monuments. </p>
                     <a href="#">Read More</a>
@@ -1698,8 +1698,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script> -->
     <!-- <script src="https://unpkg.com/@rive-app/canvas@2.9.1"></script> -->
-    <script src="./riv/rive.js"></script>
-    <script defer src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script src="./scripts/rive.js"></script>
+    <script src="./scripts/lottiesfiles.js"></script>
+    <!-- <script defer src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script> -->
     <script defer src="./rive-animations.js"></script>
     <script defer src="section-transition.js"></script>
     <script defer src="./mobile-view.js"></script>
