Removed shots section

--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
             </div>
         </div>
 
-        <div class="section-three">
+        <!-- <div class="section-three">
             <h2>Featured Properties</h2>
             <div class="video-slider position-relative">
                 <button class="nav-btn prev-btn"><img src="./images/right-arrow-white.png" width="18px"></button>
@@ -761,7 +761,7 @@
                 </div>
                 <button class="nav-btn next-btn"><img src="./images/right-arrow-white.png" width="18px"></button>
             </div>
-        </div>
+        </div> -->
 
         <div class="section-four py-5 d-none d-sm-block">
             <div class="container">
@@ -1689,7 +1689,7 @@
     <script defer src="./navbar.js"></script>
     <script defer src="./background-video.js"></script>
     <script defer src="./section-two.js"></script>
-    <script defer src="./video-slider.js"></script>
+    <!-- <script defer src="./video-slider.js"></script> -->
     <script defer src="./tablet-animation.js"></script>
     <script defer src="./box-animation.js"></script>
     <script defer src="./blog-news-section.js"></script>
