Reduced search engine placeholder's font size

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
             </div>
             <div class="search-engine" id="open-filters">
                 <input type="text" name="search" placeholder="Search locality, landmark, building or project">
-                <img src="./images/Search.png" width="60px" alt="Search Icon">
+                <img src="./images/Search.png" width="45px" alt="Search Icon">
             </div>
             <div class="bottom-container text-center">
                 <p>Are you an Owner? <span>Post your property</span><span><img src="./images/dropdown-white.png"
@@ -1689,7 +1689,7 @@
     <script defer src="./navbar.js"></script>
     <script defer src="./background-video.js"></script>
     <script defer src="./section-two.js"></script>
-    <!-- <script defer src="./video-slider.js"></script> -->
+    <script defer src="./video-slider.js"></script>
     <script defer src="./tablet-animation.js"></script>
     <script defer src="./box-animation.js"></script>
     <script defer src="./blog-news-section.js"></script>
