Added instagram embeded code

--- a/index.html
+++ b/index.html
@@ -580,16 +580,18 @@
             </div>
         </div>
 
-        <!-- <div class="section-three">
+        <div class="section-three">
             <h2>Featured Properties</h2>
             <div class="video-slider position-relative">
                 <button class="nav-btn prev-btn"><img src="./images/right-arrow-white.png" width="18px"></button>
                 <div class="video-container d-flex justify-content-start">
                     <div class="video">
-                        <video>
-                            <source src="./videos/1.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                        <div class="instagram-video"
+                            style="position: relative; width: 200px; height: 350px; overflow: hidden;border-radius: 15px">
+                            <iframe src="https://www.instagram.com/reel/C-iC6iLtniX/embed" width="300" height="430"
+                                frameborder="0" scrolling="no" allowtransparency="true"
+                                style="position: absolute; top: -70px; left: 52%;transform: translateX(-50%); "></iframe>
+                        </div>
                         <div class="volume-container hidden">
                             <div class="volume-icon volume-up">
                                 <div class="bar bar1"></div>
@@ -605,10 +607,12 @@
                         </div>
                     </div>
                     <div class="video">
-                        <video>
-                            <source src="./videos/3.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                        <div class="instagram-video"
+                            style="position: relative; width: 200px; height: 350px; overflow: hidden;border-radius: 15px">
+                            <iframe src="https://www.instagram.com/reel/C0vJn2bIifD/embed" width="300" height="430"
+                                frameborder="0" scrolling="no" allowtransparency="true"
+                                style="position: absolute; top: -70px; left: 52%;transform: translateX(-50%); "></iframe>
+                        </div>
                         <div class="volume-container hidden">
                             <div class="volume-icon volume-up">
                                 <div class="bar bar1"></div>
@@ -624,10 +628,12 @@
                         </div>
                     </div>
                     <div class="video">
-                        <video>
-                            <source src="./videos/4.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                        <div class="instagram-video"
+                            style="position: relative; width: 200px; height: 350px; overflow: hidden;border-radius: 15px">
+                            <iframe src="https://www.instagram.com/reel/C7MVWCmtPpN/embed" width="300" height="430"
+                                frameborder="0" scrolling="no" allowtransparency="true"
+                                style="position: absolute; top: -70px; left: 52%;transform: translateX(-50%); "></iframe>
+                        </div>
                         <div class="volume-container hidden">
                             <div class="volume-icon volume-up">
                                 <div class="bar bar1"></div>
@@ -643,10 +649,12 @@
                         </div>
                     </div>
                     <div class="video">
-                        <video>
-                            <source src="./videos/5.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                        <div class="instagram-video"
+                            style="position: relative; width: 200px; height: 350px; overflow: hidden;border-radius: 15px">
+                            <iframe src="https://www.instagram.com/reel/C87CirjNaru/embed" width="300" height="430"
+                                frameborder="0" scrolling="no" allowtransparency="true"
+                                style="position: absolute; top: -70px; left: 52%;transform: translateX(-50%); "></iframe>
+                        </div>
                         <div class="volume-container hidden">
                             <div class="volume-icon volume-up">
                                 <div class="bar bar1"></div>
@@ -662,10 +670,12 @@
                         </div>
                     </div>
                     <div class="video">
-                        <video>
-                            <source src="./videos/6.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                        <div class="instagram-video"
+                            style="position: relative; width: 200px; height: 350px; overflow: hidden;border-radius: 15px">
+                            <iframe src="https://www.instagram.com/reel/C4nxoM9NYs1/embed" width="300" height="430"
+                                frameborder="0" scrolling="no" allowtransparency="true"
+                                style="position: absolute; top: -70px; left: 52%;transform: translateX(-50%); "></iframe>
+                        </div>
                         <div class="volume-container hidden">
                             <div class="volume-icon volume-up">
                                 <div class="bar bar1"></div>
@@ -681,10 +691,12 @@
                         </div>
                     </div>
                     <div class="video">
-                        <video>
-                            <source src="./videos/7.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                        <div class="instagram-video"
+                            style="position: relative; width: 200px; height: 350px; overflow: hidden;border-radius: 15px">
+                            <iframe src="https://www.instagram.com/reel/C53Zv--LLAa/embed" width="300" height="430"
+                                frameborder="0" scrolling="no" allowtransparency="true"
+                                style="position: absolute; top: -70px; left: 52%;transform: translateX(-50%); "></iframe>
+                        </div>
                         <div class="volume-container hidden">
                             <div class="volume-icon volume-up">
                                 <div class="bar bar1"></div>
@@ -701,10 +713,12 @@
                         </div>
                     </div>
                     <div class="video">
-                        <video>
-                            <source src="./videos/2.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                        <div class="instagram-video"
+                            style="position: relative; width: 200px; height: 350px; overflow: hidden;border-radius: 15px">
+                            <iframe src="https://www.instagram.com/reel/C0vJn2bIifD/embed" width="300" height="430"
+                                frameborder="0" scrolling="no" allowtransparency="true"
+                                style="position: absolute; top: -70px; left: 52%;transform: translateX(-50%); "></iframe>
+                        </div>
                         <div class="volume-container hidden">
                             <div class="volume-icon volume-up">
                                 <div class="bar bar1"></div>
@@ -720,10 +734,12 @@
                         </div>
                     </div>
                     <div class="video">
-                        <video>
-                            <source src="./videos/1.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                        <div class="instagram-video"
+                            style="position: relative; width: 200px; height: 350px; overflow: hidden;border-radius: 15px">
+                            <iframe src="https://www.instagram.com/reel/C-iC6iLtniX/embed" width="300" height="430"
+                                frameborder="0" scrolling="no" allowtransparency="true"
+                                style="position: absolute; top: -70px; left: 52%;transform: translateX(-50%); "></iframe>
+                        </div>
                         <div class="volume-container hidden">
                             <div class="volume-icon volume-up">
                                 <div class="bar bar1"></div>
@@ -739,10 +755,12 @@
                         </div>
                     </div>
                     <div class="video">
-                        <video>
-                            <source src="./videos/2.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                        <div class="instagram-video"
+                            style="position: relative; width: 200px; height: 350px; overflow: hidden;border-radius: 15px">
+                            <iframe src="https://www.instagram.com/reel/C0vJn2bIifD/embed" width="300" height="430"
+                                frameborder="0" scrolling="no" allowtransparency="true"
+                                style="position: absolute; top: -70px; left: 52%;transform: translateX(-50%); "></iframe>
+                        </div>
                         <div class="volume-container hidden">
                             <div class="volume-icon volume-up">
                                 <div class="bar bar1"></div>
@@ -761,7 +779,7 @@
                 </div>
                 <button class="nav-btn next-btn"><img src="./images/right-arrow-white.png" width="18px"></button>
             </div>
-        </div> -->
+        </div>
 
         <div class="section-four py-5 d-none d-sm-block">
             <div class="container">
