Added hero section video, removed hamburger icon from larger screen

--- a/index.html
+++ b/index.html
@@ -176,39 +176,45 @@
         <div class="section-one d-none d-sm-block">
             <div class="container">
                 <video autoplay muted id="background-video">
-                    <source src="./videos/business-intro.mov" type="video/mp4">
+                    <source src="./videos/main-video.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
                 </video>
                 <video autoplay muted id="background-video-2">
-                    <source src="./videos/business-intro.mov" type="video/mp4">
+                    <source src="./videos/main-video.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
                 </video>
                 <div class="section-one-container">
                     <div class="section-one-slider">
-                        <div class="slide" data-start="0" data-end="1">
+                        <div class="slide" data-start="0" data-end="3">
                             <h1 id="slide-1">Click.<br> Connect.<br> Close.</h1>
                         </div>
-                        <div class="slide" data-start="2" data-end="4">
+                        <div class="slide" data-start="3" data-end="5">
                             <h1 id="slide-2">Click.<br> Connect.<br> Close.</h1>
                         </div>
-                        <div class="slide" data-start="5" data-end="6">
+                        <div class="slide" data-start="5" data-end="7">
                             <h1 id="slide-3">Click.<br> Connect.<br> Close.</h1>
                         </div>
-                        <div class="slide" data-start="5" data-end="6">
+                        <div class="slide" data-start="7" data-end="9">
                             <h1 id="slide-4">Click.<br> Connect.<br> Close.</h1>
                         </div>
-                        <div class="slide" data-start="5" data-end="6">
+                        <div class="slide" data-start="9" data-end="11">
                             <h1 id="slide-5">Click.<br> Connect.<br> Close.</h1>
+                        </div>
+                        <div class="slide" data-start="11" data-end="13">
+                            <h1 id="slide-6">Click.<br> Connect.<br> Close.</h1>
+                        </div>
+                        <div class="slide" data-start="13" data-end="15">
+                            <h1 id="slide-7">Click.<br> Connect.<br> Close.</h1>
                         </div>
                     </div>
                 </div>
                 <div class="section-one-bottom-outer">
                     <div class="section-one-bottom d-flex align-items-center justify-content-between">
-                        <p>Find your Dream House in just 3 steps Find your<br> Dream House in just 3 steps Find your
-                            Dream<br>
-                            House
-                            in just 3 steps</p>
-                        <button>Learn More</button>
+                        <p>Revolutionize your real estate experience with seamless, tech-driven<br> solutions by
+                            Realezi.
+                            From first-time buyers to professional sellers,<br> we make your journey from click to close
+                            effortless. </p>
+                        <button>Try it yourself</button>
                     </div>
                 </div>
             </div>
@@ -1331,30 +1337,23 @@
 
         <div class="section-seven d-none d-sm-block">
             <div class="section-seven-inner">
-                <h2>Ready to grow with us?</h2>
-                <p class="description">Ready to grow with us Ready to grow with us? Ready to grow with us? Ready
-                    to
-                    grow
-                    with us?Ready to grow with us?
-                    Ready to grow with us?Ready to grow with us?Ready to grow with us? Ready to grow with us?
+                <h2>Ready to step into your future home?</h2>
+                <p class="description">We don’t settle for less, and neither should you. You deserve a home that
+                    perfectly suits your lifestyle. Have a lot of questions?
                 </p>
                 <div class="button-container">
                     <div class="text-scroller">
-                        What are you building?
+                        Which location is perfect?
                     </div>
                     <div class="text-scroller">
-                        What are you building?
+                        Is this property safe to purchase?
                     </div>
                     <div class="text-scroller">
-                        What are you building?
-                    </div>
-                    <div class="text-scroller">
-                        What are you building?
+                        How to maximise ROI?
                     </div>
                 </div>
             </div>
-            <h3>It’s okay to not have<br>
-                all the answers!</h3>
+            <h3>It’s okay to be confused.</h3>
         </div>
 
         <div class="section-seven-mobile-view d-block d-sm-none">
@@ -1386,7 +1385,7 @@
         <div class="section-eight py-5 d-none d-sm-flex">
             <div class="container">
                 <h2>We'll help you get started</h2>
-                <button>Let's Build</button>
+                <button>Let's Connect</button>
             </div>
         </div>
 
