--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
                     <source src="./videos/main-video.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
                 </video>
-                <video autoplay muted id="background-video-2">
+                <!-- <video autoplay muted id="background-video-2">
                     <source src="./videos/main-video.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
-                </video>
+                </video> -->
                 <div class="section-one-container">
                     <div class="section-one-slider">
                         <div class="slide" data-start="0" data-end="3">
