Updated Budget range in large screen view

--- a/index.html
+++ b/index.html
@@ -502,26 +502,29 @@
                             <div class="dropdown-content">
                                 <div class="range-slider position-relative">
                                     <div class="slider-values d-flex align-items-center justify-content-between">
-                                        <p id="minValue">Rs.1Lakh</p>
-                                        <p id="maxValue">Rs.5Cr</p>
+                                        <p id="minValue1">Rs.1Lakh</p>
+                                        <p id="maxValue1">Rs.2Cr+</p>
                                     </div>
-                                    <input type="range" id="minSlider" min="1" max="500" value="1">
-                                    <input type="range" id="maxSlider" min="1" max="500" value="500">
+                                    <input type="range" id="minSlider1" min="1" max="200" value="1">
+                                    <input type="range" id="maxSlider1" min="1" max="200" value="200">
                                     <div class="slider-labels d-flex align-items-center justify-content-between">
                                         <span>1Lakh</span>
+                                        <span>
+                                            <div class='line'></div>40L
+                                        </span>
+                                        <span>
+                                            <div class='line'></div>70L
+                                        </span>
                                         <span>
                                             <div class='line'></div>1Cr
                                         </span>
                                         <span>
-                                            <div class='line'></div>2Cr
+                                            <div class='line'></div>1.4Cr
                                         </span>
                                         <span>
-                                            <div class='line'></div>3Cr
+                                            <div class='line'></div>1.7Cr
                                         </span>
-                                        <span>
-                                            <div class='line'></div>4Cr
-                                        </span>
-                                        <span>5Cr+</span>
+                                        <span>2Cr+</span>
                                     </div>
                                 </div>
                             </div>
