--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Familjen+Grotesk:ital,wght@0,400..700;1,400..700&family=Offside&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <script src="https://www.youtube.com/iframe_api"></script>
+
     <title>Realezi</title>
 </head>
 
@@ -175,10 +177,10 @@
         <!-- Section One -->
         <div class="section-one d-none d-sm-block">
             <div class="container">
-                <video autoplay muted id="background-video">
-                    <source src="./videos/main-video.mp4" type="video/mp4">
-                    Your browser does not support HTML5 video.
-                </video>
+                <iframe id="background-video" width="560" height="315"
+                    src="https://www.youtube.com/embed/6SZa2h8pew0?enablejsapi=1&mute=1" frameborder="0"
+                    allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
                 <!-- <video autoplay muted id="background-video-2">
                     <source src="./videos/main-video.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
@@ -1707,7 +1709,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="./footer.js"></script>
     <script defer src="./navbar.js"></script>
-    <script defer src="./background-video.js"></script>
+    <script src="./background-video.js"></script>
     <script defer src="./section-two.js"></script>
     <script defer src="./video-slider.js"></script>
     <script defer src="./tablet-animation.js"></script>
