Removed suggested video from youtube video

--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
         <div class="section-one d-none d-sm-block">
             <div class="container">
                 <iframe id="background-video" width="560" height="315"
-                    src="https://www.youtube.com/embed/6SZa2h8pew0?enablejsapi=1&mute=1" frameborder="0"
-                    allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    src="https://www.youtube.com/embed/6SZa2h8pew0?enablejsapi=1&mute=1&rel=0&controls=0"
+                    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
                 <!-- <video autoplay muted id="background-video-2">
                     <source src="./videos/main-video.mp4" type="video/mp4">
