--- a/index.html
+++ b/index.html
@@ -1174,7 +1174,7 @@
                                 <h3 style="color: #111F3C;">Walk through 10 mind-blowing heritage monuments </h3>
                             </div>
                             <p class="tag">Heritage</p>
-                            <img class="blog-img" src="./images/blog-img-2.jpeg" alt="">
+                            <img class="blog-img" src="./images/blog-img-2.jpg" alt="">
                             <div class="p-2">
                                 <h4>Walk through 10 mind-blowing heritage monuments </h4>
                                 <div class="d-flex align-items-center justify-content-between">
@@ -1250,7 +1250,7 @@
                                 <h3 style="color: #111F3C;">Walk through 10 mind-blowing heritage monuments </h3>
                             </div>
                             <p class="tag">Heritage</p>
-                            <img class="blog-img" src="./images/blog-img-2.jpeg" alt="">
+                            <img class="blog-img" src="./images/blog-img-2.jpg" alt="">
                             <div class="p-2">
                                 <h4>Walk through 10 mind-blowing heritage monuments </h4>
                                 <div class="d-flex align-items-center justify-content-between">
@@ -1281,7 +1281,7 @@
                         </div>
                     </div>
                     <div class="single-news-card align-items-center">
-                        <img src="./images/blog-img-2.jpeg" alt="">
+                        <img src="./images/blog-img-2.jpg" alt="">
                         <div class="content p-3 d-flex">
                             <p class="tag">Heritage</p>
                             <h4>Walk through 10 mind-blowing heritage monuments </h4>
@@ -1416,7 +1416,7 @@
                     <a href="#">Read More</a>
                 </div>
                 <div class="grid-item item2 position-relative">
-                    <img src="./images/blog-img-2.jpeg" alt="" width="100%" height="100%">
+                    <img src="./images/blog-img-2.jpg" alt="" width="100%" height="100%">
                     <p>Walk through 10 mind-blowing heritage
                         monuments. </p>
                     <a href="#">Read More</a>
