Added back hero section video

--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
         <!-- Section One -->
         <div class="section-one d-none d-sm-block">
             <div class="container">
-                <!-- <video autoplay muted id="background-video">
+                <video autoplay muted id="background-video">
                     <source src="./videos/main-video.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
-                </video> -->
+                </video>
                 <!-- <video autoplay muted id="background-video-2">
                     <source src="./videos/main-video.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
